fix "Удалена цикличность при обращении к БД, удалены зависимости на уровне rowmapper-ов, исправлен код согласно комментариям"