@@ -3,10 +3,12 @@ package ru.yandex.practicum.filmorate.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dao.FilmLikesRepository;
 import ru.yandex.practicum.filmorate.dao.FilmRepository;
 import ru.yandex.practicum.filmorate.dao.GenreRepository;
 import ru.yandex.practicum.filmorate.dao.RatingRepository;
 import ru.yandex.practicum.filmorate.dto.film.FilmDTO;
+import ru.yandex.practicum.filmorate.dto.film.GenreDTO;
 import ru.yandex.practicum.filmorate.dto.film.NewFilmRequest;
 import ru.yandex.practicum.filmorate.dto.film.UpdateFilmRequest;
 import ru.yandex.practicum.filmorate.exception.ValidateException;
@@ -14,7 +16,6 @@ import ru.yandex.practicum.filmorate.mapper.FilmMapper;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.model.Rating;
-import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -26,26 +27,41 @@ public class FilmService {
     private final FilmRepository filmRepository;
     private final RatingRepository ratingRepository;
     private final GenreRepository genreRepository;
-
-    private static final Comparator<Film> FILM_LIKES_COMPARATOR = (film1, film2) -> Integer.compare(film2.getLikes().size(), film1.getLikes().size());
+    private final FilmLikesRepository filmLikesRepository;
 
     public List<FilmDTO> getAllFilms() {
         return filmRepository.findAll().stream()
+            .map(film -> getFilmWithRatingAndGenres(film.getId()))
             .map(FilmMapper::toDTO)
             .collect(Collectors.toList());
     }
 
     public FilmDTO getById(Long filmId) {
-        Film filmById = filmRepository.getById(filmId);
+        Film filmById = getFilmWithRatingAndGenres(filmId);
+
         return FilmMapper.toDTO(filmById);
+    }
+
+    private Film getFilmWithRatingAndGenres(Long filmId) {
+        Film filmById = filmRepository.getById(filmId);
+        Rating rating = ratingRepository.getById(filmById.getRating().getId());
+        List<Genre> genres = genreRepository.findGenresByFilmId(filmId);
+
+        filmById.setRating(rating);
+        filmById.setGenres(genres);
+        return filmById;
     }
 
     public FilmDTO createFilm(NewFilmRequest request) {
         Rating rating = ratingRepository.getById(request.getMpa().getId());
+
         List<Genre> genres = request.getGenres().stream()
-            .map(genre -> genreRepository.findById(genre.getId()))
-            .map(genre -> genre.orElseThrow(() -> new ValidateException("Жанр не найден")))
-            .toList();
+            .map(GenreDTO::getId)
+            .collect(Collectors.collectingAndThen(Collectors.toList(), genreRepository::findAllByIds));
+        if (request.getGenres().size() != genres.size()) {
+            throw new ValidateException("Не найден жанр");
+        }
+
         Film film = FilmMapper.toFilm(request, rating, genres);
         Film save = filmRepository.save(film);
 
@@ -56,8 +72,8 @@ public class FilmService {
         Film film = filmRepository.getById(request.getId());
         Rating rating = ratingRepository.getById(request.getMpa().getId());
         List<Genre> genres = request.getGenres().stream()
-            .map(genre -> genreRepository.getById(genre.getId()))
-            .toList();
+            .map(GenreDTO::getId)
+            .collect(Collectors.collectingAndThen(Collectors.toList(), genreRepository::findAllByIds));
 
         Film updatedFilm = FilmMapper.updateFilmFields(film, request, rating, genres);
 
@@ -71,10 +87,13 @@ public class FilmService {
     }
 
     public List<FilmDTO> getPopularFilms(int limit) {
-        return filmRepository.findAll().stream()
-            .sorted(FILM_LIKES_COMPARATOR)
-            .limit(limit)
+        return filmRepository.findPopularFilmsIds(limit).stream()
             .map(FilmMapper::toDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
+
+    public void checkFilmExists(Long filmId) {
+        filmRepository.getById(filmId);
+    }
+
 }
